add pause button

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,6 +30,9 @@
     <property name="spacing">
      <number>0</number>
     </property>
+    <item row="2" column="0" colspan="4">
+     <layout class="QGridLayout" name="windowWidget"/>
+    </item>
     <item row="1" column="1">
      <widget class="QDoubleSpinBox" name="radiusSpinBox">
       <property name="suffix">
@@ -52,7 +55,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="2">
+    <item row="1" column="3">
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -72,8 +75,12 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0" colspan="3">
-     <layout class="QGridLayout" name="windowWidget"/>
+    <item row="1" column="2">
+     <widget class="QPushButton" name="pauseplayButton">
+      <property name="text">
+       <string>Pause</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
