--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -103,6 +103,7 @@
     <property name="title">
      <string>Options</string>
     </property>
+    <addaction name="actionTrails"/>
     <addaction name="actionClear_All"/>
    </widget>
    <addaction name="menuOptions"/>
@@ -117,6 +118,17 @@
   <action name="actionClear_All">
    <property name="text">
     <string>Clear All</string>
+   </property>
+  </action>
+  <action name="actionTrails">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Trails</string>
    </property>
   </action>
  </widget>
