--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,9 +30,6 @@
     <property name="spacing">
      <number>0</number>
     </property>
-    <item row="2" column="0" colspan="4">
-     <layout class="QGridLayout" name="windowWidget"/>
-    </item>
     <item row="1" column="1">
      <widget class="QDoubleSpinBox" name="radiusSpinBox">
       <property name="suffix">
@@ -55,7 +52,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="3">
+    <item row="1" column="6">
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -68,10 +65,10 @@
       </property>
      </spacer>
     </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label">
+    <item row="1" column="4">
+     <widget class="QPushButton" name="clearButton">
       <property name="text">
-       <string> Radius </string>
+       <string>Clear</string>
       </property>
      </widget>
     </item>
@@ -81,6 +78,23 @@
        <string>Pause</string>
       </property>
      </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string> Radius </string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="7">
+     <widget class="QCheckBox" name="trailsCheckBox">
+      <property name="text">
+       <string>Trails </string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0" colspan="8">
+     <layout class="QGridLayout" name="windowWidget"/>
     </item>
    </layout>
   </widget>
@@ -99,14 +113,6 @@
     </property>
     <addaction name="actionAccretion_Disk"/>
    </widget>
-   <widget class="QMenu" name="menuOptions">
-    <property name="title">
-     <string>Options</string>
-    </property>
-    <addaction name="actionTrails"/>
-    <addaction name="actionClear_All"/>
-   </widget>
-   <addaction name="menuOptions"/>
    <addaction name="menuPresets"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
