--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -126,6 +126,13 @@
       </property>
      </widget>
     </item>
+    <item row="1" column="5">
+     <widget class="QPushButton" name="resetViewButton">
+      <property name="text">
+       <string>Reset view</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
